Configured Apache in front of JBoss for the app task-viewer. Downgraded to Apache 2.2 for compatibility with existing mod_jk binary.

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,7 +1,10 @@
-FROM httpd:2.4
+FROM httpd:2.2
 
 # Copy the static files.
 COPY ./htdocs/* /usr/local/apache2/htdocs/
 
-# Copy the configuration filess.
+# Copy the Apache modules.
+COPY ./modules/* /usr/local/apache2/modules/
+
+# Copy the configuration files.
 COPY ./conf/* /usr/local/apache2/conf/
