--- a/apache/conf/httpd.conf
+++ b/apache/conf/httpd.conf
@@ -266,7 +266,7 @@ LogLevel warn
     # If you prefer a logfile with access, agent, and referer information
     # (Combined Logfile Format) you can use the following directive.
     #
-    #CustomLog "logs/access_log" combined
+    CustomLog "logs/access_log" combined
 </IfModule>
 
 <IfModule alias_module>
