Added example of how to ignore paths to be redirected from Apache to JBoss.

--- a/apache/conf/mod-jk.conf
+++ b/apache/conf/mod-jk.conf
@@ -23,6 +23,9 @@ JkRequestLogFormat "%w %V %T"
 # Mount your applications
 JkMount /task-viewer/* jboss
 
+# Exclude paths.
+# JkUnMount /task-viewer/resources/* jboss
+
 # You can use external file for mount points.
 # It will be checked for updates each 60 seconds.
 # The format of the file is: /url=worker
