Optimized Dockerfiles for jboss and webapp and use specific commit version for the app to run. Webapp uses now elasticsearch and is linked to it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ webapp:
   links:
     - mysql
     - activemq
+    - elasticsearch
   volumes:
     - /container_data/webapp/logs:/opt/webapp/logs
 
