--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ webapp:
     - mysql
     - activemq
     - elasticsearch
+    - elasticsearchbis:elasticsearch2
   volumes:
     - /container_data/webapp/logs:/opt/webapp/logs
 
@@ -72,6 +73,17 @@ elasticsearch:
   ports:
     - 9200:9200
     - 9300:9300
+  environment:
+    ES_JAVA_OPTS: -Des.node.name=elasticsearch -Des.network.host=${DOCKER_HOST_IP} -Des.transport.tcp.port=9300 -Des.http.port=9200 -Des.discovery.zen.ping.multicast.enabled=false -Des.discovery.zen.ping.unicast.hosts=${DOCKER_HOST_IP}:9301
   volumes:
-    - /container_data/elasticsearch/config:/usr/share/elasticsearch/config
     - /container_data/elasticsearch/data:/usr/share/elasticsearch/data
+
+elasticsearchbis:
+  build: elasticsearch
+  ports:
+    - 9201:9201
+    - 9301:9301
+  environment:
+    ES_JAVA_OPTS: -Des.node.name=elasticsearch_bis -Des.network.host=${DOCKER_HOST_IP} -Des.transport.tcp.port=9301 -Des.http.port=9201 -Des.discovery.zen.ping.multicast.enabled=false -Des.discovery.zen.ping.unicast.hosts=${DOCKER_HOST_IP}:9300
+  volumes:
+    - /container_data/elasticsearchbis/data:/usr/share/elasticsearch/data
